--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: 📂 저장소 체크아웃
-        uses: actions/checkout@v4
+        uses: SamKirkland/FTP-Deploy-Action@v1
 
       - name: 🔄 FTP 업로드
         uses: SamKirkland/FTP-Deploy-Action@v4
